--- a/css/local.css
+++ b/css/local.css
@@ -1,5 +1,6 @@
 body {
-    background-color: #073642;
+    background-image: url('../assets/background.jpg');
+    background-size: cover;
 }
 
 #left, #right {
